<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:foregroundGravity="center"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_32dp"
        android:layout_marginEnd="@dimen/_32dp"
        android:elevation="@dimen/_10dp"
        app:cardCornerRadius="@dimen/_10dp"
        app:cardElevation="@dimen/_10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iniciar_sesi_n"
                android:textColor="@color/black"
                android:textSize="@dimen/_22sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="@dimen/_200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/image_login"
                android:src="@drawable/perro" />

            <EditText
                android:id="@+id/txtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/user"
                android:inputType="text" />

            <EditText
                android:id="@+id/txtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/contrase_a"
                android:inputType="textPassword" />


            <TextView
                android:id="@+id/txtRecoverPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/recuperar_contrase_a"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:text="@string/sign_in" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:text="@string/registrar" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>